logo has been modified

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #logo-img {
-  background: url('../images/restaurant-logo_large.png') no-repeat;
+  background: url('../images/llbistro-large.png') no-repeat;
   width: 150px;
   height: 150px;
   margin: 50px 15px 10px 0;
@@ -283,7 +283,7 @@ h3.menu-item-title {
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Header */
   #logo-img {
-    background: url('../images/restaurant-logo_medium.png') no-repeat;
+    background: url('../images/llbistro-medium.png') no-repeat;
     width: 100px;
     height: 100px;
   }
