changing the background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-size: 16px;
   color: #fff;
-   background: url('../images/bodybg3.png');
+   background: url('../images/image20.png');
   font-family: 'Oxygen', sans-serif;
 }
 
