--- a/css/styles.css
+++ b/css/styles.css
@@ -216,59 +216,27 @@ body {
 }
 /* END MENU CATEGORIES PAGE */
 
-/* SINGLE CATEGORY PAGE */
-#single-category-title{
-  font-family: serif;
-  font-size: 2.5em;
-  margin-bottom: 35px;
-  color: #000;
-  font-style: oblique;
+/* ABOUT PAGE */
+#about-box{
+  margin: 5px 10px ;
+  border: 2px solid #fff;
 }
-.menu-item-tile {
-  margin-bottom: 35px;
-  color: #000;
-}
-.menu-item-tile hr {
-  width: 80%;
-}
-.menu-item-tile .menu-item-price {
-  font-size: 1.1em;
-  text-align: right;
-  margin-top: -15px;
-  margin-right: -15px;
-}
-.menu-item-tile .menu-item-price span {
-  font-size: .6em;
-}
-.menu-item-photo {
-  position: relative;
-  border: 2px solid #3F0C1F; 
-  overflow: hidden;
-  padding: 0;
-  margin-right: -15px;
-  margin-left: auto;
-  margin-bottom: 20px;
-  max-width: 250px;
-}
-.menu-item-photo div {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 80px;
-  background-color: #557c3e;
+#aboutheader{
   text-align: center;
+  font-family: serif;
+    font-size: 1.9em;
+    margin-bottom: 35px;
+    color: #951c49;
+    font-style: oblique;
 }
-.menu-item-description {
-  padding-right: 30px;
+#about{
+  padding-left: 5px;
+  word-spacing: 1px;
+  letter-spacing: .8px;
+  font-size: 1.5em;
+  color: #951c49;
 }
-h3.menu-item-title {
-  margin: 0 0 10px;
-}
-.menu-item-details {
-  font-size: .9em;
-  font-style: italic;
-}
-/* END SINGLE CATEGORY PAGE */
+/* END ABOUT PAGE */
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
