small changes on the menu page

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ body {
   color: #DCDCDC;
   font-style: italic;
   font-size: 1em;
+  margin-top: 10px;
 }
 /*.navbar-brand p { /* Kosher cert */
   /*color: #000;
@@ -205,7 +206,7 @@ body {
   text-transform: uppercase;
   background-color: #000;
   color: #fff;
-  opacity: .8;
+  opacity: .7;
 }
 .category-tile:hover {
   box-shadow: 0 1px 5px 1px #cccccc;
