--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,28 @@ body {
 
 
 /* HOME PAGE */
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
 .container .jumbotron {
   box-shadow: 0 0 50px #000;
   border: 2px solid #000;
